# music_catalogue

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
music_catalogue/: main.py
music_catalogue/crud/: __init__.py  artists.py  assets.py  main.py  persons.py  search.py  supabase_client.py  utils.py  works.py
music_catalogue/models/: __init__.py  artists.py  assets.py  exceptions.py  persons.py  types.py  users.py  utils.py  validation.py  works.py
music_catalogue/models/inputs/: artist_create.py  person_create.py  work_create.py
music_catalogue/models/responses/: artists.py  assets.py  persons.py  search.py  users.py  works.py
music_catalogue/routers/: artists.py  persons.py  search.py  works.py
scripts/: cnw_xml_to_db.py
supabase/: config.toml
supabase/migrations/: 0001_initial_migration.sql  20251213165401_more_classical_properties.sql  20260106211013_search_functions.sql  20260120013356_rename_member_artist_id.sql  20260120021106_person_alternative_names.sql
tests/: README.md  conftest.py
tests/crud/: test_crud_artists.py  test_crud_assets.py  test_crud_persons.py  test_crud_search.py  test_crud_utils.py  test_crud_works.py
tests/models/: test_model_validation.py  test_models_artists.py  test_models_persons.py  test_models_utils.py  test_models_works.py
tests/models/inputs/: test_artist_create.py  test_person_create.py  test_work_create.py
tests/routes/: test_artist_endpoints.py  test_endpoints.py  test_person_endpoints.py  test_search_endpoints.py  test_work_endpoints.py
(+4 files in other folders)
