[tool.poetry]
name = "music-catalogue"
version = "0.1.0"
description = ""
authors = ["Lara <94401584+lara-bellatin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
supabase = "^2.25.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[tool.ruff]
line-length = 120
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["music_catalogue"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
